# Twisty

./: .clang-format  .gitignore  .gitmodules  Benchmark2.bat  Benchmark3.bat  Benchmark_5_1.cpp  BezierCurve.cpp  BezierCurve.h  Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt  CMakePresets.json  CombinedWeightUtils.cpp  CombinedWeightUtils.cu  CombinedWeightUtils.h  Curve.cpp  Curve.h  CurveGen.cu  CurvePerturbUtils.cpp  CurvePerturbUtils.cu  CurvePerturbUtils.h  CurvePerturbUtils_linux.cpp  CurvePurturber.cpp  CurvePurturber.h  CurveUtils.cpp  CurveWriter.cpp  DeviceCurve.h  DifferentNormalSThetaExperiment.cpp  Doxyfile  Doxyfile-mcss  ExperimentRunner.cpp  ExperimentRunner.h  ExperimentRunnerCpu.cpp  ExperimentRunnerCpu.h  ExperimentRunnerGpu.cu  ExperimentRunnerGpu.h  FreezeFrameExperiment.cpp  FreezeFrameExperiment2.cpp  FullExperiment.cpp  FullExperimentRunner copy.h  (+58 more)
Experiments/: BeamSpreadExperiment.cpp  BezierExperiment.cpp  CMakeLists.txt  CalculateNormalizer.cpp  ComputeNormalizer.cpp  ConvergenceExperiment.cpp  ExperimentBase.cpp  ExperimentBase.h  ExperimentUtils.cpp  ExperimentUtils.h  FiveSegmentAnglePathIntegral.cpp  FiveSegmentAngleSpaceMC.cpp  FiveSegmentBucketAverage.cpp  FiveSegmentExploreDoF.cpp  FiveSegmentHeatmap.cpp  FiveSegmentUniformPathGenerationSolver.cpp  FullExperiment.cpp  IceCoreExperiment.cpp  MSegmentUniformPathGenerationSolver.cpp  NSegmentAnglePathIntegral.cpp  NoisyCircleAngleIntegration.cpp  NoisyCircleExperiment.cpp  NoisyCircleExperimentHalf.cpp  NoisyCirclePathGenerationMSegment.cpp  NoisyCirclePathGenerationMSegment_Pinhole.cpp  NoisyCirclePathGenerationMSegment_RaycastVolume.cpp  PathWeightBehavior.cpp  RingBenchmark.cpp  Simple_FiveSegment_Analytical.cpp  Simple_SixSegment_Analytical.cpp  SixSegmentAnglePathIntegral.cpp  SixSegmentAngleSpaceMC.cpp  SixSegmentBucketAverage.cpp  SixSegmentExploreDoF.cpp  SixSegmentUniformPathGenerationSolver.cpp  SmallSegmentExperiment.cpp  StressTestCombinedWeights.cpp  TangentRotationCurvatureExperiment.cpp
Neural/: CMakeLists.txt  CMakePresets.json  generate_dataset_multiple_light_positions.cpp  raymarch_proof.cpp  raymarch_vdb.cpp  test_sph.cpp
Neural/dependencies/: CMakeLists.txt
Neural/python/: evaluate_image.py  neural_network.py  testing_network.py  volume_network.py
PhaseFunctions/: GaussianPhaseFunction.py
RelatedWork/Fred_2017/: CMakeLists.txt  Fred_2017_Benchmark_5_1.cpp  Main.cpp
Samples/: BeamSpread.json  Default.json  FullExperiment.json  NoisyCircle.json
Tests/: BezierTests.cpp  CMakeLists.txt  CurvatureTorsionFrameTest.cpp  CurveCurvatureTest.cpp  CurveErrorFunctionTest.cpp  CurveTorsionTest.cpp  GaussianFunctionTest.cpp  PathSetGen.cpp  PathWeightTest.cpp  PathWeightTestCur.cpp  PathWeightTestDs.cpp  RootSolveTest.cpp  RootSolveTestCuda.cu  WeightTableTest.cpp
Tools/: CMakeLists.txt  ConvergenceExperiment.cpp  CurvatureHistogramExperiment.cpp  CurveWeightor.cpp  ExportedFiveSegmentsFixer.cpp  ExportedPathFixer.cpp  ExportedPathWeightsFixer.cpp  ExtractProblemPaths.cpp  FFE_ImageGen.cpp  GenerateFFDistances.cpp  GenerateFFDistancesHalf.cpp  HighestWeightPathExperiment.cpp  InitialCurveGenerator.cpp  LogifyAndMinMaxData.cpp  LogifyGridOfData.cpp  MinMaxGivenVals.cpp  Sandbox.cpp  Sandbox2.cpp  SolidAngleExperiment.cpp  SpringLengthExperiment.cpp  WeightIntegralFunctionExplorer.cpp  WeightSliceExperiment.cpp  ZeroToOneNormalization.cpp
Tools/deprecated/: ConvergenceExperiment.cpp  CurvatureHistogramExperiment.cpp  CurveWeightor.cpp  ExtractProblemPaths.cpp  FFE_ImageGen.cpp  HighestWeightPathExperiment.cpp  LogifyAndMinMaxData.cpp  MinMaxGivenVals.cpp  PathHeatmap.cpp  Sandbox.cpp  SolidAngleExperiment.cpp  SpringLengthExperiment.cpp  WeightSliceExperiment.cpp  ZeroToOneNormalization.cpp
Twisty/: BezierCurve.cpp  BezierCurve.h  Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt  CombinedWeightUtils.cpp  CombinedWeightUtils.h  Curve.cpp  Curve.h  CurvePerturbUtils.cpp  CurvePerturbUtils.h  CurveUtils.cpp  CurveUtils.h  CurveWriter.h  Derivative.h  ExperimentRunner.cpp  ExperimentRunner.h  FullExperimentRunnerOldMethodBridge.cpp  FullExperimentRunnerOldMethodBridge.h  FullExperimentRunnerOptimalPerturb.cpp  FullExperimentRunnerOptimalPerturb.h  FullExperimentRunnerOptimalPerturbOptimized_GPU.cu  FullExperimentRunnerOptimalPerturbOptimized_GPU.h  Integrate.h  MathConsts.h  PathGeneration.cpp  PathGeneration.h  PathWeightUtils.cpp  PathWeightUtils.h  PathWeighters.cpp  PathWeighters.h
Utils/: CMakeLists.txt  GeometricCurvePurturb.cpp  PathBatchWeightor.cpp  PathSimilarityScoreUtil.cpp  WeightExplorer.cpp
Viewer/: CMakeLists.txt  CurveViewer.cpp  CurveViewer.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWindow.cpp  OpenGLWindow.h  PathBatchViewer.cpp  PathBatchViewerWidget.cpp  PathBatchViewerWidget.h  PathPerturbViewer.cpp  PathPerturbViewerWidget.cpp  PathPerturbViewerWidget.h  RunningCurveViewer.cpp  RunningCurveViewer.h  TwistyViewer.cpp
build_scripts/: CMakeLists.txt  patch_libconfig.bat
build_scripts/lib/: CMakeLists.txt
configs/Dissertation/Analytical_GT/: FiveSegment.json  SixSegment.json
configs/Dissertation/AngleIntegration/: FiveSegment.json  SixSegment.json
configs/Dissertation/Bunny_10/: 10.json  11.json  12.json  13.json  14.json  15.json  6.json  7.json  8.json  9.json  run.bash
configs/Dissertation/Bunny_25/: 10.json  11.json  12.json  13.json  14.json  15.json  7.json  8.json  9.json  run.bash
configs/Samples/: BeamSpread.json  Default.json  FiveSegmentDoF.json  FullExperiment.json  NoisyCircleAngleIntegration.json  NoisyCirclePathGenerationMSegment.json  RingBenchmark.json  SixSegmentDoF.json  StressTest.json
dependencies/: CMakeLists.txt
python/: config.py  geometry.py  gfx.py  gl.py  twisty-show.py  util.py
scripts/: PathBatchWeightorScript.py  PathGenScript.py  PlotAngleHistPoints.py  visualize_experiment.py
unitweights/: CMakeLists.txt
unitweights/GroundTruth_ICTT27/: CMakeLists.txt  CalculateGroundTruth.cpp
unitweights/python/: PDFvsM.ps  fweights.C  fweights.out  fweights.py  order.out
(+3738 files in other folders)
